test/Runner/errors/tests/MI/Hook/Hook2.init.js
mi("Suite", () => {
	beforeSeed(() => {}, { timeout: "foo" });
});
